Fixed new lines in Emails and truncation of event_details

--- a/app/assets/stylesheets/events.css
+++ b/app/assets/stylesheets/events.css
@@ -3,6 +3,14 @@
   They will automatically be included in application.css.
 */
 
+#event_overview > dt {
+    width: 200px;
+}
+
+#event_overview > dd {
+    margin-left: 220px;
+}
+
 .event-date-picker-start, .event-date-picker-end {
 }
 
